# colvars-finder

./: .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  training_tasks.py
colvarsfinder/: autoencoder.py  base.py  core.py  eigenfunction.py  nn.py  trajectory.py  utils.py
colvarsfinder/colvars/: training_tasks.py  trajectory.py  utils.py
colvarsfinder/core/: autoencoder.py  base_task.py  eigenfunction.py  trajectory.py
colvarsfinder/sampler/: LangevinIntegrator.py
docs/: autoencoder.rst  base.rst  colvars.rst  conf.py  core.rst  eigenfunction.rst  environment.yml  index.rst  installation.rst  math_backgrounds.rst  nn.rst  quickstart.rst  sampler.rst  trajectory.rst  utils.rst
docs/colvars/: training_tasks.rst  trajectory.rst  utils.rst
docs/core/: autoencoder.rst  base_task.rst  eigenfunction.rst  trajectory.rst
docs/sampler/: LangevinIntegrator.rst  calc_weights.rst
examples/2d/: 2d.ipynb  2d_independent.ipynb  README.md
examples/dipeptide/: README.md  feature.txt  main.ipynb  main.py  params.cfg  top.gro  traj_analyzer.ipynb  traj_analyzer_mda.ipynb
examples/notebook-2d-toymodels/: 2d.ipynb
src/: training_tasks.py  trajectory.py  utils.py
src/colvars/: training_tasks.py  trajectory.py  utils.py
src/cvfinder/: trajectory.py  utils.py
src/sampler/: LangevinIntegrator.py  calc_weights.py
